--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         <div class="wrapper">
 
             {%- include about.html -%}
-
+<!-- 
             {%- if site.data.projects.size > 0 -%}
                 {%- include projects.html -%}
             {%- endif -%}
@@ -22,7 +22,7 @@
 
             {%- if site.data.education.size > 0 -%}
                 {%- include education.html -%}
-            {%- endif -%}
+            {%- endif -%} -->
 
             {%- include more.html -%}
 
@@ -31,10 +31,10 @@
 
     {%- include footer.html -%}
 
-    <a href="https://github.com/sproogen/resume-theme" target="_blank">
+<!--     <a href="https://github.com/sproogen/resume-theme" target="_blank">
       <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
         alt="Fork me on GitHub">
-    </a>
+    </a> -->
 
 </body>
 
