Configuration file modified

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,10 @@
 
             {%- include more.html -%}
 
+            {%- include experience.html -%}
+
+            {%- include projects.html -%}
+
         </div>
     </main>
 
