--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 
             {%- include more.html -%}
 
-            {%- include experience.html -%}
+<!--             {%- include experience.html -%} -->
 
             {%- include projects.html -%}
 
